--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>PKSTOP | Professional Online Services</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="images/logo.jpeg">
+    <link rel="icon" href="logo.jpeg">
 
     <meta name="description" content="PKSTOP provides professional PF and EPF services including PF withdrawal, transfer, UAN activation and claim assistance.">
     <meta name="keywords" content="PF services, EPF withdrawal, UAN help, PF transfer, PKSTOP">
@@ -16,7 +16,7 @@
 <button id="goTop" title="Go to top">↑</button>
 <!-- Floating WhatsApp Button -->
 <a href="https://wa.me/918169883528" target="_blank" class="float-btn whatsapp" title="WhatsApp">
-    <img src="images/whatsapp-icon.jpeg" alt="WhatsApp" style="width:26px;height:26px;">
+    <img src="whatsapp-icon.jpeg" alt="WhatsApp" style="width:26px;height:26px;">
 </a>
 
 <!-- Floating Call Button -->
@@ -221,7 +221,7 @@ function openWhatsApp(service) {
   <div class="container header-flex">
 
     <div class="logo-area">
-      <img src="images/logo.jpeg" alt="PKSTOP Logo">
+      <img src="logo.jpeg" alt="PKSTOP Logo">
       <span>PK STOP</span>
     </div>
 
@@ -251,7 +251,7 @@ function openWhatsApp(service) {
 </header>
 
 <div class="event-banner">
-  <img src="images/event.jpeg" alt="Festival Event">
+  <img src="event.jpeg" alt="Festival Event">
 </div>
 
 <!-- HERO -->
@@ -340,7 +340,7 @@ function openWhatsApp(service) {
         <div class="service-box">
 
             <div class="service-card" onclick="openWhatsApp('PF Withdrawal Assistance')">
-                <img src="images/pf-withdrawal.jpeg" alt="PF Withdrawal">
+                <img src="pf-withdrawal.jpeg" alt="PF Withdrawal">
                 <div class="service-info">
                     <h3>PF Withdrawal Assistance</h3>
                     <p>Online PF withdrawal & claim processing support.</p>
@@ -348,7 +348,7 @@ function openWhatsApp(service) {
             </div>
 
             <div class="service-card" onclick="openWhatsApp('PF Transfer Services')">
-                <img src="images/pf-transfer.jpeg" alt="PF Transfer">
+                <img src="pf-transfer.jpeg" alt="PF Transfer">
                 <div class="service-info">
                     <h3>PF Transfer Services</h3>
                     <p>Transfer PF balance between employers smoothly.</p>
@@ -356,7 +356,7 @@ function openWhatsApp(service) {
             </div>
 
             <div class="service-card" onclick="openWhatsApp('UAN Activation & KYC Update')">
-                <img src="images/uan-kyc.jpeg" alt="UAN KYC">
+                <img src="uan-kyc.jpeg" alt="UAN KYC">
                 <div class="service-info">
                     <h3>UAN Activation & KYC</h3>
                     <p>Aadhaar, PAN & bank linking support.</p>
@@ -364,7 +364,7 @@ function openWhatsApp(service) {
             </div>
 
             <div class="service-card" onclick="openWhatsApp('GST Registration')">
-                <img src="images/gst-registration.jpeg" alt="GST">
+                <img src="gst-registration.jpeg" alt="GST">
                 <div class="service-info">
                     <h3>GST Registration</h3>
                     <p>New GST registration & guidance.</p>
@@ -372,7 +372,7 @@ function openWhatsApp(service) {
             </div>
 
             <div class="service-card" onclick="openWhatsApp('GST Filing')">
-                <img src="images/gst-filing.jpeg" alt="GST Filing">
+                <img src="gst-filing.jpeg" alt="GST Filing">
                 <div class="service-info">
                     <h3>GST Filing</h3>
                     <p>Monthly & quarterly GST return filing.</p>
@@ -380,7 +380,7 @@ function openWhatsApp(service) {
             </div>
 
             <div class="service-card" onclick="openWhatsApp('PAN Card Services')">
-                <img src="images/pan-card.jpeg" alt="PAN Card">
+                <img src="pan-card.jpeg" alt="PAN Card">
                 <div class="service-info">
                     <h3>PAN Card Services</h3>
                     <p>New PAN & correction services.</p>
@@ -388,7 +388,7 @@ function openWhatsApp(service) {
             </div>
 
             <div class="service-card" onclick="openWhatsApp('Gumasta Certificate')">
-                <img src="images/Gumasta-Certificate.jpeg" alt="Gumasta Certificate">
+                <img src="Gumasta-Certificate.jpeg" alt="Gumasta Certificate">
                 <div class="service-info">
                     <h3>Gumasta Certificate</h3>
                     <p>Gumasta License Registration services.</p>
@@ -396,7 +396,7 @@ function openWhatsApp(service) {
             </div>
 
             <div class="service-card" onclick="openWhatsApp('MSME Certificate')">
-                <img src="images/MSME-Certificate.jpeg" alt="MSME Certificate">
+                <img src="MSME-Certificate.jpeg" alt="MSME Certificate">
                 <div class="service-info">
                     <h3>MSME Certificate</h3>
                     <p>Udyam Registration Certificate services.</p>
@@ -404,7 +404,7 @@ function openWhatsApp(service) {
             </div>
 
             <div class="service-card" onclick="openWhatsApp('Damar Batu')">
-                <img src="images/Damar-Batu.jpeg" alt="Damar Batu">
+                <img src="Damar-Batu.jpeg" alt="Damar Batu">
                 <div class="service-info">
                     <h3>Damar Batu</h3>
                     <p>Damar Batu service involves supplying and trading this natural resin,
@@ -413,7 +413,7 @@ function openWhatsApp(service) {
             </div>
 
             <div class="service-card" onclick="openWhatsApp('Voter ID Services')">
-                <img src="images/voter-id.jpeg" alt="Voter ID">
+                <img src="voter-id.jpeg" alt="Voter ID">
                 <div class="service-info">
                     <h3>Voter ID Services</h3>
                     <p>New voter ID & update support.</p>
@@ -421,7 +421,7 @@ function openWhatsApp(service) {
             </div>
 
             <div class="service-card" onclick="openWhatsApp('Copyright, Trademark')">
-                <img src="images/Trademark.jpeg" alt="Trademark">
+                <img src="Trademark.jpeg" alt="Trademark">
                 <div class="service-info">
                     <h3>Copyright, Trademark</h3>
                     <p>contact for Registered trademark </p>
@@ -429,7 +429,7 @@ function openWhatsApp(service) {
             </div>
 
             <div class="service-card" onclick="openWhatsApp('Driving Licence Services')">
-                <img src="images/driving-licence.jpeg" alt="DL">
+                <img src="driving-licence.jpeg" alt="DL">
                 <div class="service-info">
                     <h3>Driving Licence</h3>
                     <p>DL apply, renewal & assistance.</p>
@@ -437,7 +437,7 @@ function openWhatsApp(service) {
             </div>
 
             <div class="service-card" onclick="openWhatsApp('NOC , Agreement , Deed')">
-                <img src="images/Notary.jpeg" alt="Notary">
+                <img src="Notary.jpeg" alt="Notary">
                 <div class="service-info">
                     <h3>NOC , Agreement , Deed</h3>
                     <p>Contact for Notary services.</p>
@@ -445,7 +445,7 @@ function openWhatsApp(service) {
             </div>
 
             <div class="service-card" onclick="openWhatsApp('Import Export Certificate(IEC) ')">
-                <img src="images/Import-Export.jpeg" alt="IEC">
+                <img src="Import-Export.jpeg" alt="IEC">
                 <div class="service-info">
                     <h3>Import Export Certificate(IEC)</h3>
                     <p>Contact for complete IEC services.</p>
@@ -453,7 +453,7 @@ function openWhatsApp(service) {
             </div>
 
             <div class="service-card" onclick="openWhatsApp('Passport Services')">
-                <img src="images/passport.jpeg" alt="Passport">
+                <img src="passport.jpeg" alt="Passport">
                 <div class="service-info">
                     <h3>Passport Services</h3>
                     <p>Online passport application support.</p>
@@ -592,7 +592,7 @@ function openWhatsApp(service) {
             <h4>Contact</h4>
             <p>📞 +918169883528 </p>
             <p class="contact-item">
-            <img src="images/whatsapp-icon.jpeg" alt="WhatsApp" class="contact-icon">
+            <img src="whatsapp-icon.jpeg" alt="WhatsApp" class="contact-icon">
             <a href="https://wa.me/918169883528" target="_blank">
             WhatsApp Support
             </a>
@@ -601,7 +601,7 @@ function openWhatsApp(service) {
             <p>📩 pkstopenterprises@gmail.com</p>
             
             <p class="contact-item">
-            <img src="images/instagram.jpeg" alt="instagram" class="icon">
+            <img src="instagram.jpeg" alt="instagram" class="icon">
             <a href="https://www.instagram.com/pkstop0405?igsh=dTB2ZjQ3YTBlYTlm" target="_blank">Instagram</a>
             </p>
 
@@ -615,4 +615,5 @@ function openWhatsApp(service) {
 </footer>
 
 </body>
+
 </html>
