--- a/index.html
+++ b/index.html
@@ -250,9 +250,9 @@ function openWhatsApp(service) {
   </div>
 </header>
 
-<div class="event-banner">
-  <img src="event.jpeg" alt="Festival Event">
-</div>
+<!<div class="event-banner">
+  <!<img src="event.jpeg" alt="">>
+<!</div>>
 
 <!-- HERO -->
 <section class="hero" id="home">
@@ -617,3 +617,4 @@ function openWhatsApp(service) {
 </body>
 
 </html>
+
