--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@ function openWhatsApp(service) {
 </header>
 
 <!<div class="event-banner">
-  <!<img src="event.jpeg" alt="">>
-<!</div>>
+  <!<img src="event.jpeg" alt="">
+<!</div>
 
 <!-- HERO -->
 <section class="hero" id="home">
@@ -617,4 +617,5 @@ function openWhatsApp(service) {
 </body>
 
 </html>
+
 
